<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


	<androidx.preference.PreferenceCategory
		android:title="@string/category_advanced_settings">

		<androidx.preference.ListPreference
        	android:key="numberMaxThreadSocks"
            android:title="@string/title_number_max_threads"
			android:summary="@string/summary_number_max_threads"
			android:defaultValue="8th"
        	android:entries="@array/pref_maxThreads_option_labels"
        	android:entryValues="@array/pref_maxThreads_option_values"
		/>

		<androidx.preference.ListPreference
			android:key="numberMaxThreadpayload"
			android:title="@string/title_number_max2_threads"
			android:summary="@string/summary_number_max2_threads"
			android:defaultValue="25th"
			android:entries="@array/pref_maxThreads2_option_labels"
			android:entryValues="@array/pref_maxThreads2_option_values" />


		<androidx.preference.CheckBoxPreference
			android:key="tetherSubnet"
			android:summary="@string/summary_tethering_subnet"
			android:title="@string/title_tethering_subnet"
		/>
		
		<androidx.preference.CheckBoxPreference
			android:key="disableDelaySSH"
			android:title="@string/title_disable_delay_ssh"
			android:summary="@string/summary_disable_delay_ssh"
		/>
	
	</androidx.preference.PreferenceCategory>

	
</androidx.preference.PreferenceScreen>
